[package]
name = "proverStark"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
sha3 = "0.10"  # Biblioteca para keccak256
k256 = "0.13.3"  # Biblioteca para operaciones con claves ECDSA
tiny-keccak = { version = "2.0.0", features = ["keccak"] }
blake3 = { version = "1.5", default-features = false }
core-utils = { version = "0.1.2", default-features = false }
hex = { version = "0.4", optional = false }
structopt = { version = "0.3", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-forest = { version = "0.1", features = ["ansi", "smallvec"], optional = true }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
winterfell = { version = "0.9", default-features = false }

[dev-dependencies]
criterion = "0.5"